--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -20,6 +20,11 @@
             <li><a href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <div class="burger">
+              <span class="burger-line"></span>
+              <span class="burger-line"></span>
+              <span class="burger-line"></span>
+            </div> 
           </ul>
         </nav>
         <div class="header__content">
