--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -16,14 +16,20 @@
         <nav class="header__nav">
           <img src="./img/logo.png" alt="My Prtofolio" class="header__logo" />
           <ul>
-            <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="header-links"><a href="index.html" class="current">Home</a></li>
+            <li class="header-links"><a href="about.html">About</a></li>
+            <li class="header-links"><a href="work.html">Work</a></li>
+            <li class="header-links"><a href="contact.html">Contact</a></li>
             <div class="burger">
               <span class="burger-line"></span>
               <span class="burger-line"></span>
               <span class="burger-line"></span>
+              <div class="burger-menu">
+                <li class="burger-links"><a href="index.html" class="current">Home</a></li>
+                <li class="burger-links"><a href="about.html">About</a></li>
+                <li class="burger-links"><a href="work.html">Work</a></li>
+                <li class="burger-links"><a href="contact.html">Contact</a></li>
+              </div>
             </div> 
           </ul>
         </nav>
