--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/d47ac4f3a7.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d47ac4f3a7.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js" defer></script>
     <title>Radu Mihaila | Web Developer</title>
   </head>
@@ -16,26 +22,49 @@
         <nav class="header__nav">
           <img src="./img/logo.png" alt="My Prtofolio" class="header__logo" />
           <ul>
-            <li class="header-links"><a href="index.html" class="current">Home</a></li>
+            <li class="header-links">
+              <a href="index.html" class="current">Home</a>
+            </li>
             <li class="header-links"><a href="about.html">About</a></li>
             <li class="header-links"><a href="work.html">Work</a></li>
             <li class="header-links"><a href="contact.html">Contact</a></li>
             <div class="burger">
-              <span class="burger-line"></span>
-              <span class="burger-line"></span>
-              <span class="burger-line"></span>
-              <div class="burger-menu">
-                <li class="burger-links"><a href="index.html" class="current">Home</a></li>
-                <li class="burger-links"><a href="about.html">About</a></li>
-                <li class="burger-links"><a href="work.html">Work</a></li>
-                <li class="burger-links"><a href="contact.html">Contact</a></li>
+              <div class="burger-container">
+                <div class="burger-container-box">
+                  <span class="burger-line"></span>
+                  <span class="burger-line"></span>
+                  <span class="burger-line"></span>
+                </div>
               </div>
-            </div> 
+              <div class="burger-menu">
+                <li class="burger-menu-links">
+                  <a href="index.html" class="current">Home</a>
+                </li>
+                <li class="burger-menu-links">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="burger-menu-links">
+                  <a href="work.html">Work</a>
+                </li>
+                <li class="burger-menu-links">
+                  <a href="contact.html">Contact</a>
+                </li>
+              </div>
+            </div>
           </ul>
         </nav>
         <div class="header__content">
-          <h1>I am Radu The <span class="txt-type" data-wait="3000" data-words='[" Designer", "Web Developer", " Robot Programmer"]'></span></h1>
-          <p class="header__description">I specialize in UI/UX and Web Developing</p>
+          <h1>
+            I am Radu The
+            <span
+              class="txt-type"
+              data-wait="3000"
+              data-words='[" Designer", "Web Developer", " Robot Programmer"]'
+            ></span>
+          </h1>
+          <p class="header__description">
+            I specialize in UI/UX and Web Developing
+          </p>
           <a href="work.html" class="btn__light">View My Work</a>
         </div>
       </div>
@@ -44,38 +73,44 @@
       <div class="container">
         <h2 class="section-title">I Specialize In</h2>
         <div class="bottom-line"></div>
-        <div class="lead">Robot Programming UI/UX layouts and Web Developing</div>
+        <div class="lead">
+          Robot Programming UI/UX layouts and Web Developing
+        </div>
         <div class="specials">
           <div>
             <i class="fas fa-file-alt fa-2x"></i>
             <h3>Concepting</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus fuga minima veritatis accusantium quis, expedita excepturi optio! Qui,
-              at dolorum.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus
+              fuga minima veritatis accusantium quis, expedita excepturi optio!
+              Qui, at dolorum.
             </p>
           </div>
           <div>
             <i class="fas fa-desktop fa-2x"></i>
             <h3>UI/UX</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus fuga minima veritatis accusantium quis, expedita excepturi optio! Qui,
-              at dolorum.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus
+              fuga minima veritatis accusantium quis, expedita excepturi optio!
+              Qui, at dolorum.
             </p>
           </div>
           <div>
             <i class="fas fa-object-ungroup fa-2x"></i>
             <h3>Visual Design</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus fuga minima veritatis accusantium quis, expedita excepturi optio! Qui,
-              at dolorum.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus
+              fuga minima veritatis accusantium quis, expedita excepturi optio!
+              Qui, at dolorum.
             </p>
           </div>
           <div>
             <i class="fas fa-thumbs-up fa-2x"></i>
             <h3>Interaction</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus fuga minima veritatis accusantium quis, expedita excepturi optio! Qui,
-              at dolorum.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus
+              fuga minima veritatis accusantium quis, expedita excepturi optio!
+              Qui, at dolorum.
             </p>
           </div>
         </div>
@@ -117,35 +152,50 @@
       <div class="container">
         <h2 class="section-title">My Creative Process</h2>
         <div class="bottom-line"></div>
-        <p class="lead">All my UI/UX and design projects are based off of a practiced formula to get the result that i am looking for</p>
+        <p class="lead">
+          All my UI/UX and design projects are based off of a practiced formula
+          to get the result that i am looking for
+        </p>
         <div class="process">
           <div>
             <i class="fas fa-file-alt fa-2x process-icon my-2">
               <div class="process-step">1</div>
             </i>
             <h3>Discuss The Project</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, sint nemo magni sunt et non?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit,
+              sint nemo magni sunt et non?
+            </p>
           </div>
           <div>
             <i class="fas fa-desktop fa-2x process-icon my-2">
               <div class="process-step">2</div>
             </i>
             <h3>Brainstorming ^ Concept</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, sint nemo magni sunt et non?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit,
+              sint nemo magni sunt et non?
+            </p>
           </div>
           <div>
             <i class="fas fa-object-ungroup fa-2x process-icon my-2">
               <div class="process-step">3</div>
             </i>
             <h3>UI/UX Planning</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, sint nemo magni sunt et non?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit,
+              sint nemo magni sunt et non?
+            </p>
           </div>
           <div>
             <i class="fas fa-thumbs-up fa-2x process-icon my-2">
               <div class="process-step">4</div>
             </i>
             <h3>Interaction</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, sint nemo magni sunt et non?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit,
+              sint nemo magni sunt et non?
+            </p>
           </div>
         </div>
       </div>
